weshoes, maafe mangold

--- a/index.html
+++ b/index.html
@@ -269,6 +269,8 @@ Error message and password prompt
 
 <li>RTLStylesheet</li>
 
+<li>weshoes בביאליק 3</li>
+
 <li>אבא יואל</li>
 
 <li>אבינו</li>
@@ -910,6 +912,8 @@ Error message and password prompt
 <li>מאכילים את המצפון</li>
 
 <li>מאנטה ריי</li>
+
+<li>מאפה טופו ומנגולד</li>
 
 <li>מג'דרה</li>
 
@@ -9129,7 +9133,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[אופטיקה בליסימה]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[weshoes בביאליק 3]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9149,7 +9153,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20190506083617144" title="$:/temp/search">
+<div created="20161023184814872" modified="20190524120038827" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9450,6 +9454,13 @@ well,
 {
     float: right;
 }</pre>
+</div>
+<div created="20190527075100830" modified="20190527082325772" tags="[[כאן בגטו]]" title="weshoes בביאליק 3">
+<pre>[img[pictures/we-shoes.jpg]]
+
+!!![[תומר]]:
+
+ברור לי שאני לא אמור לקדם רשתות, אבל בהמלצת חבר, כאבי הגב שלי הובילו אותי לחנות [[הזאת|https://patuah.co.il/he/b/weshoes-%D7%91%D7%99%D7%90%D7%9C%D7%99%D7%A7-3-%D7%AA%D7%9C-%D7%90%D7%91%D7%99%D7%91--u10499]], שבביאליק 3, ואחרי שקניתי לי זוג נעלי hoka חייזריות אצל המוכרת הנהדרת, אני מוכרח להמליץ מכל בחינה.</pre>
 </div>
 <div created="20170608165812345" modified="20180502192555710" tags="[[משפחת באומן]] [[נאמני הגנזך]]" title="אבא יואל">
 <pre>[img[pictures/aba-vetirza.jpg]]
@@ -14387,6 +14398,69 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 הכי גררררררררר שיש</pre>
 </div>
+<div created="20190511095710523" modified="20190513164622003" tags="[[חיות אוכל]] [[למה הדבר דומה]] [[מתכונים טבעוניים]] מתכונים" title="מאפה טופו ומנגולד">
+<pre>[img[pictures/mangold-tofu.jpg]]
+
+!!![[הצוות]]:
+
+החומרים לבצק:
+
+*2 כוסות קמח
+*1 כוס מים חמים
+*1/2 כוס שמן זית
+*קורט מלח ים גס
+
+החומרים למלית:
+
+*1/2 כוס שמן זית
+*בצל בינוני קצוץ
+*שן שום קצוצה
+*חבילת עלי מנגולד שטופים וחתוכים לרצועות 
+*זוקיני מגורר גס
+*300 גרם טופו מגורר גס 
+*מלח ים גס
+*פלפל שחור גרוס
+*קורט-שניים אגוז מוסקט
+*שליש כוס רוטב טריאקי
+
+לציפוי:
+
+*חופן גרעיני דלעת
+*זילוף שמן זית
+*1 כף מלח ים גס
+
+לצד המאפה:
+
+*טחינה גולמית
+*שמן זית
+*מלח גס
+
+אופן ההכנה:
+
+
+1. בעזרת כף, מערבבים את הקמח, המלח, ואת שמן הזית.
+
+2. מוסיפים את המים החמים וממשיכים לערבב עד שמתקבל בצק חלק.
+
+3. נותנים לבצק להתקרר מעט (עד שכבר אפשר לגעת בו בלי לחטוף כוויה) וממשיכים ללוש את הכדור הרך. מקררים עוד קצת, ומניחים במקרר.
+
+4. מכינים את המלית:
+
+במחבט ברזל עם מעט משמן הזית, (את השמן שנשאר מוסיפים עם שאר התבלינים), צולים על להבה בינונית לפי הסדר, את השום והבצל עד שנהיים שקופים זהובים, את הזוקיני עד שמבהיר, עלי המנגולד עד שהמתרככים, והטופו. לאורך כל הצלייה מערבבים בקלות בעזרת כפות עץ מהחוץ פנימה. מוסיפים את התבלינים וממשיכים בצלייה על אש נמוכה. טועמים - אם צריך מתקנים את התיבול, ומסירים מהלהבה.
+
+5. מחממים את התנור לחום בינוני נמוך, ומכינים את תבנית התנור מרופדת בנייר פרגמנט (אם מלחלחים את התבנית במעט מים ומצמידים את הנייר זה עוזר)
+
+6. מקמחים משטח עבודה, מוציאים את הבצק מהמקרר ומחלקים אותו לשני עיגולים שווים
+
+7. מרדדים מכל אחד מהם מלבן בגדול של  25ס&quot;מ על 35ס&quot;מ פחות או יותר, לאורך מרכז כל אחד מהם, מניחים חצי מכמות המלית.
+
+8. עוטפים עם שני צידי הבצק אחד מעל השני - מניחים את הצד הימני על פני המלוי (שמאלה), ואת העלה השמאלי ימינה על פני הבצק. את החלק העליון מקפלים לאחור וגם את התחתון, ומניחים בתבנית
+
+9. בעזרת סכין חלקה וחדה חורצים בעדינות חריצים לרוחב המאפים, מזלפים שמן זית, מפזרים את גרעיני הדלעת ואת המלח הגס, ואופים 40-50 דקות - עד שהבצק שחום.
+
+10. להגשה אפשר להכין קערה עם טחינה גולמית לתוכה מוזגים מעט שמן זית ומלח גס, אליהם אפשר גם להוסיף עגבניה סחוטה, עירית קצוצה וכד'
+</pre>
+</div>
 <div created="20170402193858167" modified="20180605133225529" tags="[[מתכוני ארוחת הכריסמס]] [[מתכונים טבעוניים]] מתכונים" title="מג'דרה">
 <pre>[img[pictures/mejadra-matconim.jpg]]
 
@@ -14630,13 +14704,13 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 !!!''&lt;&lt;tag &quot;בחוות החיות&quot;&gt;&gt;, החיות מפגינות אמונה.</pre>
 </div>
-<div created="20170114175718512" modified="20170720151506915" tags="[[המטבח על פי ז'נבייב]]" title="מנקים היטב">
+<div created="20170114175718512" modified="20190524120312362" tags="[[המטבח על פי ז'נבייב]]" title="מנקים היטב">
 <pre>[img[pictures/menakim-heytev.jpg]]
 
 !!![[ז'נבייב]]:
 
 כמה ימים אחרי [[שיויו|יויו]] התחיל לעבוד אצלי, בסוף יום העבודה, כשניקינו את המסעדה, שמתי לב שכאשר הוא הופך את הכסאות על השולחנות הנקיים לקראת שטיפת הרצפה, הוא מנקה את תחתיות רגליהם. 
-מראה מפעים ומעורר השראה.
+כזה, עוד לא ראיתי!
 
 ביקשתי מיויו להפוך [[למפקח על הנקיון|חלומות שחלמנו]], והוא קיבל בשמחה את הג'וב.
 
