--- a/index.html
+++ b/index.html
@@ -9133,7 +9133,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[weshoes בביאליק 3]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="jazz [[כאן בגטו]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9153,7 +9153,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20190524120038827" title="$:/temp/search">
+<div created="20161023184814872" modified="20190607125439969" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9365,7 +9365,7 @@ You see it written left to right because it is tagged `LTR` (uppercase).
 
 [[you may say i'm a dreamer|https://www.youtube.com/watch?v=RwUGSYDKUxU]]</pre>
 </div>
-<div created="20171004154734427" modified="20180825091202529" tags="[[אחיות חוץ]] מוזיקה חבר" title="jazz">
+<div created="20171004154734427" modified="20190607125447301" tags="[[אחיות חוץ]] מוזיקה חבר [[כאן בגטו]]" title="jazz">
 <pre>[img[pictures/jazz.jpg]]
 
 !!![[הצוות]]:
