--- a/index.html
+++ b/index.html
@@ -551,6 +551,8 @@ Error message and password prompt
 
 <li>האסיפה הראשונה</li>
 
+<li>הארבעה 2</li>
+
 <li>הארי דין סטנטון</li>
 
 <li>הבריסטות שכאן</li>
@@ -9139,7 +9141,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[כאן גאווה]] TLV [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[הארבעה 2]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9159,7 +9161,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20190622105648067" title="$:/temp/search">
+<div created="20161023184814872" modified="20190623052604790" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -11882,6 +11884,16 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 
 
+
+</pre>
+</div>
+<div created="20190623124800612" modified="20190624162718642" tags="[[כאן בגטו]]" title="הארבעה 2">
+<pre>
+[img[pictures/haarbaa2.jpg]]
+
+!!![[תומר]]:
+
+מה שכובש אותי בבנין הזה שנקרא הארבעה 2, זה השעון שנמצא בצדו הימני.
 
 </pre>
 </div>
