השביל של אריאלה

--- a/index.html
+++ b/index.html
@@ -647,6 +647,8 @@ Error message and password prompt
 
 <li>הרקוויאם של פורה</li>
 
+<li>השביל של אריאלה</li>
+
 <li>התדר בואך רומנו</li>
 
 <li>וויקליף ז'אן</li>
@@ -9132,7 +9134,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20190617190736822" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20190617191001290" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20190624170030749" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9141,7 +9143,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[הארבעה 2]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האסיפה הראשונה]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9161,7 +9163,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20190623052604790" title="$:/temp/search">
+<div created="20161023184814872" modified="20190626185509710" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10136,7 +10138,7 @@ well,
 
 &lt;&lt;list-links filter:&quot;[tag[אימהות]]&quot;&gt;&gt;</pre>
 </div>
-<div created="20161206200127567" modified="20180201220557625" tags="[[אחות כהן]]" title="אירי">
+<div created="20161206200127567" modified="20190626152540491" tags="[[אחות כהן]]" title="אירי">
 <pre>[img[pictures/iri.jpg]]
 
 !!![[אלפרד]]:
@@ -10149,7 +10151,7 @@ well,
 
 אני מבקש ממנה, והיא מתקשרת למורה שלה לאלכסנדר וקובעת לי שיעור ראשון.
 
-ובכדי שתבינו עוד, אני ממליץ כאן על שלושה דברים:
+ובכדי שתבינו עוד, אני ממליץ כאן על ארבעה דברים:
 
 1. [[הרקוויאם של פורה]], תוך כדי קריאת מה שאירי כתבה.
 
@@ -11866,7 +11868,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 כל אחד [[פריבילגי|גבר פריבילגי]] בדרכו. ברור שאם נולדת לבנה, יפה, חתיכה, אינטלגנטית, סקסית ובתה של [[דוקטור גריי המיתולוגית|https://www.imdb.com/name/nm0123632/?ref_=ttfc_fc_cl_t42]], ובאת להתמחות - אף אחד לא יהיה אמפתי לכך שהיא לא ראתה אותך ממטר.
 [[הכל מתחיל|http://www.imdb.com/title/tt0413573/]], כשדוקטור [[מרדית גריי|https://www.imdb.com/name/nm0690186/?ref_=tt_cl_t1]] מגיעה להתמחות בבית החולים &quot;סיאטל גרייס&quot;, [[אחרי לילה סוער ומסעיר|https://www.youtube.com/watch?v=Fou8hTxSdxQ]], עם מי שמתברר אחר כך, [[כמק דרימי|https://www.imdb.com/name/nm0001131/?ref_=tt_cl_t5]] - מנתח המוח החתיך, שייהרג בסוף עונה 11 לאורך פרק שלם. השיחות האינטימיות ביותר קורות מעל פציינטים מורדמים, עם גוף חתוך. [[שונדה|http://www.imdb.com/name/nm0722274/?ref_=nv_sr_1]] יודעת להראות את מורכבות ההיררכיה האנושית, לתת בראש כשצריך, ותמיד לרגש.</pre>
 </div>
-<div created="20170504162635914" modified="20170817163640560" tags="[[קופים ממונעים]]" title="האסיפה הראשונה">
+<div created="20170504162635914" modified="20190626185816251" tags="[[קופים ממונעים]]" title="האסיפה הראשונה">
 <pre>[img[pictures/asefot.jpg]]
 
 !!![[פיליפ]]:
@@ -11875,9 +11877,9 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 לפני שבוע, (כלומר, למעלה משנה אחרי אותה ארוחה), זו הייתה הפעם הראשונה מאז, שיויו ביקש מכולנו לבוא, וממש כולם חוץ [[מדןדן|דןדן נסע]] שנסע, היו, כולל [[איריס|איריס הבת]], ביתה של אווה אהובתי.
 
-יויו עמד מול כולם, ובדרכו המתנדנדת ביקש [[מפה|פה]] לעמוד קרוב אליו, וסיפר איך לפני יומיים העליב אותו,  כשלא לגמרי הבין את כוונתו של יויו, כשערכו את הפרק הראשון של סדרת הפורנו האינטרנטית שלו.
+יויו עמד מול כולם, ובדרכו המתנדנדת ביקש [[מפה|פה]] לעמוד קרוב אליו, וסיפר איך לפני כמה ימים העליב אותו,  כשלא לגמרי הבין את כוונתו של יויו, כשערכו את הפרק הראשון של סדרת הפורנו האינטרנטית שלו.
 
-&quot;זה קרה לפני חמישה ימים, [[שפגעתי|ממשיכים לדמם]] בפה, וזה לא הניח לי מאז. אני ממש מתבייש, כי ממש צעקתי עליו ודיברתי לא יפה. מצד שני, אני רק בנאדם, ובסופו של דבר קראתי לכם, כדי להגיד לכם, שכולנו כואבים וכולנו מכאיבים, וחוץ מהדברים המגניבים כאן בגנזך, אני חושב שאם רוצים באמת להשפיע, אז צריך לספר את [[הסיפורים האמיתיים|סיפורים אמיתיים]] כמו שהם, ושאין מה להתבייש בכלום, אפילו לא בהתקפי הזעם של גורה, ואני מבקש שתכתבו - לא בקטע של מרגש - כי אם בקטע של [[חשוב|imagine]], ותודה [[לדוד האמיתי|הדוד האמיתי]].
+&quot;זה קרה לפני חמישה ימים, [[שפגעתי|ממשיכים לדמם]] בפה, וזה לא הניח לי מאז. אני ממש מתבייש, כי ממש צעקתי עליו ודיברתי לא יפה. מצד שני, אני רק בנאדם, ובסופו של דבר קראתי לכם, כדי להגיד לכם, שכולנו כואבים וכולנו מכאיבים, וחוץ מהדברים המגניבים כאן בגנזך, אני חושב שאם רוצים באמת להשפיע, אז צריך לספר את [[הסיפורים האמיתיים|סיפורים אמיתיים]] כמו שהם, ושאין מה להתבייש בכלום, אפילו לא בהתקפי הזעם של גורה, ואני מבקש שתכתבו - לא בקטע של מרגש - כי אם בקטע של [[חשוב|imagine]], 
 
 כשהוא אמר את זה נזכרתי באיתן שלי, בני הצעיר, וכמה קשה לי איתו, אני הפסיכיאטר, [[הולך יחף|אני הפסיכיאטר]].
 
@@ -11888,8 +11890,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 </pre>
 </div>
 <div created="20190623124800612" modified="20190624162718642" tags="[[כאן בגטו]]" title="הארבעה 2">
-<pre>
-[img[pictures/haarbaa2.jpg]]
+<pre>[img[pictures/haarbaa2.jpg]]
 
 !!![[תומר]]:
 
@@ -12510,6 +12511,14 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 אני מאזינה לביצוע של [[Choir and Symphony Orchestra of the Ryszard Bukowski Music School in Wrocław, Poland|https://www.afit.edu.pl/]]. אני מעדיפה את [[הביצוע הזה|https://www.youtube.com/watch?v=wEgAWjXIxFA]]  גם כשאיני מתבוננת בפניהם היפים והקשובים של חברי התזמורת והמקהלה, ובנברשות התלויות מעל לראשיהם. עוד לא הצלחתי להבין אם תלויות שם שש או שאולי שבע נברשות, שהיו יכולות להתאים לסט של [[חתונת רפאים|http://www.imdb.com/title/tt0121164/]]. הן מוצאות חן בעיני. הן שונות זו מזו בגודל ובצורה אך הן מאותה המשפחה. 
 
 גם הסטודנטית השביעית משמאל בשורת הבנות של המקהלה מוצאת חן בעיני. עלמה יפהפייה שהייתה יכולה בקלות להיות מלוהקת לאחת מההפקות על פי אחד מספריה של ג'יין אוסטין. עיניה נעות בין מחברת הטקסט שמונחת בידיה לבין המנצח ששר בלי קול. אני נעה בין מסמך הוורד לווידאו, מידי פעם מביטה בנוף העיר. קר, אך אני לבושה היטב. הרוח הקרה מוסיפה לדרמה שבתמונה בה אני נמצאת כעת. אצבעותיו הארוכות של עלם האורגן נעות ברכות על הקלידים, ואני חושבת על כך, שאין לדעת מה מסתתר מאחורי הפנים התמימים והיפים הללו של העלמה השרה את המוסיקה של [[פורה המיוסר|גבריאל פורה]]. צווארה הארוך וגופה נראים ככלי שרת זך לקולה, שערה החלק והבהיר אסוף לאחור ברישול, ושפתי הלב שלה שרות In Paradisum. רגע הריחוף שלאחר השחרור. עיניה הירוקות נפערות וחיוך צדי עולה על שפתיה ואני שרה: בגן עדן, ילד מתוק שלי, הגעת, אלי, לידי, לחיקי, לבי, כאן בקודש, [[גולה|גלות]] תמיד. סגרתי את חלון היו טיוב לפני שהחלו מחיאות הכפיים, והסרתי מעלי את האוזניות. צומת סואן מחשבות המה בראשי, ויותר מכול נמלאתי עצב מכך, שמה שראיתי כשהבטתי על עצמי באופן לא מעורב ככל שאפשר, כמו ש[[רוז'ה]] לימד אותנו, זה עד כמה אני זקוקה לאהבה. הכנסתי את המחשב והאוזניות לתיק הגב. </pre>
+</div>
+<div created="20190624163906171" modified="20190626152608380" tags="[[כאן בגטו]] [[מטא בדיון]] [[אחיות חוץ]]" title="השביל של אריאלה">
+<pre>
+[img[pictures/hashvil-shel-ariela.jpg]]
+
+!!![[תומר]]:
+
+השביל היפה הזה נמצא  בצידו המזרחי של האילון, והוא השביל של אריאלה, חברתי [[מהעבודה באולפן|מערכת תל אביב]]</pre>
 </div>
 <div created="20181101155948399" modified="20190617133654637" tags="[[כאן בגטו]] [[חיות אוכל]] מוזיקה [[מטא בדיון]] מטבחים" title="התדר בואך רומנו">
 <pre>[img[pictures/teder-romano.jpg]]
