--- a/index.html
+++ b/index.html
@@ -1063,6 +1063,8 @@ Error message and password prompt
 
 <li>סלק מבושל</li>
 
+<li>סמוך על סול</li>
+
 <li>ספייק לי</li>
 
 <li>ספירל</li>
@@ -9143,7 +9145,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האסיפה הראשונה]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[סמוך על סול]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -12513,8 +12515,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 גם הסטודנטית השביעית משמאל בשורת הבנות של המקהלה מוצאת חן בעיני. עלמה יפהפייה שהייתה יכולה בקלות להיות מלוהקת לאחת מההפקות על פי אחד מספריה של ג'יין אוסטין. עיניה נעות בין מחברת הטקסט שמונחת בידיה לבין המנצח ששר בלי קול. אני נעה בין מסמך הוורד לווידאו, מידי פעם מביטה בנוף העיר. קר, אך אני לבושה היטב. הרוח הקרה מוסיפה לדרמה שבתמונה בה אני נמצאת כעת. אצבעותיו הארוכות של עלם האורגן נעות ברכות על הקלידים, ואני חושבת על כך, שאין לדעת מה מסתתר מאחורי הפנים התמימים והיפים הללו של העלמה השרה את המוסיקה של [[פורה המיוסר|גבריאל פורה]]. צווארה הארוך וגופה נראים ככלי שרת זך לקולה, שערה החלק והבהיר אסוף לאחור ברישול, ושפתי הלב שלה שרות In Paradisum. רגע הריחוף שלאחר השחרור. עיניה הירוקות נפערות וחיוך צדי עולה על שפתיה ואני שרה: בגן עדן, ילד מתוק שלי, הגעת, אלי, לידי, לחיקי, לבי, כאן בקודש, [[גולה|גלות]] תמיד. סגרתי את חלון היו טיוב לפני שהחלו מחיאות הכפיים, והסרתי מעלי את האוזניות. צומת סואן מחשבות המה בראשי, ויותר מכול נמלאתי עצב מכך, שמה שראיתי כשהבטתי על עצמי באופן לא מעורב ככל שאפשר, כמו ש[[רוז'ה]] לימד אותנו, זה עד כמה אני זקוקה לאהבה. הכנסתי את המחשב והאוזניות לתיק הגב. </pre>
 </div>
 <div created="20190624163906171" modified="20190626152608380" tags="[[כאן בגטו]] [[מטא בדיון]] [[אחיות חוץ]]" title="השביל של אריאלה">
-<pre>
-[img[pictures/hashvil-shel-ariela.jpg]]
+<pre>[img[pictures/hashvil-shel-ariela.jpg]]
 
 !!![[תומר]]:
 
@@ -15439,6 +15440,13 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 * חותכים לפלחים.
 * יוצקים שמן זית ובוזקים מלח ים גס.
 * מערבבים בעדינות ומגישים, וזה גם נשמר כמה ימים במקרר.</pre>
+</div>
+<div created="20190713120312411" modified="20190713122344427" tags="סדרות" title="סמוך על סול">
+<pre>[img[pictures/better-call-saul.jpg]]
+
+!!![[יויו]]:
+
+רוצה לומר, אפשר לסמוך על ג'ימי מק'גיל, שיהפוך [[לסול גודמן|https://www.imdb.com/title/tt3032476/]], ושזו  תהיה אחלה דמות לאחלה סדרה.</pre>
 </div>
 <div created="20170814193959289" modified="20190204183033195" tags="[[אחיות חוץ]] סרטים" title="ספייק לי">
 <pre>[img[pictures/spike-lee.jpg]]
