--- a/index.html
+++ b/index.html
@@ -9145,7 +9145,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[סמוך על סול]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="הסופרנוס [[טוני סופרנו]] [[הסוף נשאר פתוח]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9165,7 +9165,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20190626185509710" title="$:/temp/search">
+<div created="20161023184814872" modified="20190722111854405" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -12195,7 +12195,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 </pre>
 </div>
-<div created="20170206170428832" modified="20190617133448833" tags="[[הנחלה בה גדלתי]] ארוחות מסעדות אפייה מטבחים" title="המטבח של הנחלה">
+<div created="20170206170428832" modified="20190718053904847" tags="[[הנחלה בה גדלתי]] ארוחות מסעדות אפייה מטבחים" title="המטבח של הנחלה">
 <pre>[img[pictures/hamitbach-shel-hanachala.jpg]]
 
 !!![[אווה]]:
@@ -12890,12 +12890,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 אני לא פריק של פיצה אבל כשזה קורה אז [[בטוני וספה|https://www.tonyvespa.co.il/]], בעניין הזה אין שאלה.</pre>
 </div>
-<div created="20170922153729733" modified="20190310195450564" tags="הסופרנוס טלוויזיה" title="טוני סופרנו">
+<div created="20170922153729733" modified="20190722113207959" tags="הסופרנוס טלוויזיה" title="טוני סופרנו">
 <pre>[img[pictures/tony-soprano.jpg]]
 
 !!![[אנג'ליק]]:
 
-זה סוג של פוקס שטוני התחתן [[כרמלה|http://www.imdb.com/title/tt0141842/characters/nm0004908?ref_=ttfc_fc_cl_t3]] - שלו ובעיקר של ילדיו.
+זה סוג של פוקס שטוני התחתן עם [[כרמלה|http://www.imdb.com/title/tt0141842/characters/nm0004908?ref_=ttfc_fc_cl_t3]] - שלו ובעיקר מזל גדול לילדיו.
 
 לקראת סוף הסדרה, (כן, סיימנו אמש), טוני נוסע ללאס וגאס, ופוגש שם בחורה שהייתה של [[כריס|כריסטופר מולטיסנטי]], שכבר מת. הוא לוקח איתה [[פיוטה|https://he.wikipedia.org/wiki/%D7%A4%D7%99%D7%95%D7%98%D7%94]]. הוא עובר חוויה שמשפיעה עליו - ואף חוזר [[מהורהר|https://www.youtube.com/watch?v=1re5cGlP-Xg]].
 
