--- a/index.html
+++ b/index.html
@@ -9145,7 +9145,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="הסופרנוס [[טוני סופרנו]] [[הסוף נשאר פתוח]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[דפני אברואה]] מסוכנת [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9165,7 +9165,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20190722111854405" title="$:/temp/search">
+<div created="20161023184814872" modified="20190821144022794" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -14782,7 +14782,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20170520202542754" modified="20170728195448401" tags="[[סיפורים אמיתיים]]" title="מסוכנת">
+<div created="20170520202542754" modified="20190821144027050" tags="[[סיפורים אמיתיים]]" title="מסוכנת">
 <pre>[img[pictures/mesookenet.jpg]]
 
 !!![[אלפרד]]:
@@ -14797,7 +14797,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 שנה אחר-כך היא ילדה את ריקי המתוקה. היא לא הצליחה לתפקד כאם. דויד גידל את ריקי, והיא, עברה מעבודה לעבודה, מחברה לחברה, מחבר לחבר. מתחברת לאנשים, ומיד נכנסת להם לחיים ולנשמה. מפרידה בין זוגות, מנצלת, מגיעה לבתים ושואבת כל מה שרק אפשר, כולל את מה שיש במקרר, בגדים, חפצים. מחטטת להם במחשב, לא נותנת מנוחה - עד שזה מתפוצץ בבום גדול.
 
-מעת לעת, אבי נאלץ להיות [[המייק|http://www.imdb.com/character/ch0185321/?ref_=tt_cl_t9]] שלה. 
+מעת לעת, אבי נאלץ להיות [[המייק|https://en.wikipedia.org/wiki/Mike_Ehrmantraut]] שלה. 
 
 רוע הלב שלה הוא בלתי נסלח, ואני רק מציע - אל תתעסקו עם הדפני!!!</pre>
 </div>
