סתיו, טרמה, הקלה אחר כך, מדל בבל

--- a/index.html
+++ b/index.html
@@ -271,6 +271,8 @@ Error message and password prompt
 
 <li>TLV</li>
 
+<li>TREME</li>
+
 <li>weshoes בביאליק 3</li>
 
 <li>אבא יואל</li>
@@ -641,6 +643,8 @@ Error message and password prompt
 
 <li>הקיוסק של גילי</li>
 
+<li>הקלה אחר כך</li>
+
 <li>הקליניקה</li>
 
 <li>הרוקי מורקמי</li>
@@ -927,6 +931,8 @@ Error message and password prompt
 
 <li>מגבות מטבח</li>
 
+<li>מגדל בבל בקטע טוב</li>
+
 <li>מדו</li>
 
 <li>מה שבאמת קרה בארוחת כריסמס</li>
@@ -1070,6 +1076,8 @@ Error message and password prompt
 <li>ספירל</li>
 
 <li>סרטים</li>
+
+<li>סתיו</li>
 
 <li>עוגות תאנים</li>
 
@@ -9133,10 +9141,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170607193038305" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20161023184709475" modified="20190617190736822" title="$:/state/tab/moresidebar-401116514">
-<pre>$:/core/ui/MoreSideBar/Missing</pre>
+<div created="20161023184709475" modified="20190912084349307" title="$:/state/tab/moresidebar-401116514">
+<pre>$:/core/ui/MoreSideBar/Tags</pre>
 </div>
-<div created="20161023184705203" modified="20190624170030749" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20190912084726799" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9145,7 +9153,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[דפני אברואה]] מסוכנת [[האחיות כהן]]" title="$:/StoryList">
+<div list="TREME [[הקלה אחר כך]] [[מגדל בבל בקטע טוב]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9165,7 +9173,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20190821144022794" title="$:/temp/search">
+<div created="20161023184814872" modified="20190912084343827" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9473,6 +9481,9 @@ well,
 !!![[תומר]]:
 
 ה-TLV הוא לגמרי  כאן בגטו, במשולש שבין החשמונאים, קרליבך ודרך בגין, אך אני רואה אותו כקצה של לגונה מפורזת, אליו מגיעים ברכבת, ממנה אפשר לצרוך [[תחב&quot;צ|תחבורה ציבורית]], או ללכת דרך שביל שמתחיל בעזריאלי, עולה דרך קריית הממשלה, ממשיך [[דרך שרונה|בדרך לשרונה]], עובר דרך שבילי התופת שמעל הבורות החפורים למען יבנו עוד מגדלים, חוצה את רחוב הארבעה למעבר שדרך [[ככר גבעון|לחמים]], והנה - כל שנותר הוא לחצות את החשמונאים ולהיכנס דרך ענן הבושם לתוך ה-fashion mall והיית שם.</pre>
+</div>
+<div created="20190908124031824" modified="20190908124147649" tags="סדרות" title="TREME">
+<pre>[img[pictures/treme.jpg]]</pre>
 </div>
 <div created="20190527075100830" modified="20190527082325772" tags="[[כאן בגטו]]" title="weshoes בביאליק 3">
 <pre>[img[pictures/we-shoes.jpg]]
@@ -12476,6 +12487,11 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 את גילי הנפלא אני מכיר עוד מהתקופה שהיה סניף של [[רביבה וסיליה|https://www.revivaandcelia.co.il/]] ברחוב הארבעה, ליד [[מערכת תל אביב]]. כמה שמחתי כשגיליתי שהוא פתח את [[הקיוסק שלו|https://www.facebook.com/%D7%92%D7%99%D7%9C%D7%99-%D7%A7%D7%99%D7%95%D7%A1%D7%A7-%D7%91%D7%A8%D7%95%D7%98%D7%A9%D7%99%D7%9C%D7%93-Gilis-kiosk-1264150057010863/?ref=page_internal]] ברוטשילד 31 פינת אלנבי, שם יכינו לך קפה טעים עם מאפים טעימים של רביבה וסיליה וחיוך של טוב. אני לוקח מקיאטו כפול וממשיך [[לנוטבוק|נוטבוק]].</pre>
 </div>
+<div created="20190911122045171" modified="20190916070202954" tags="[[כאן בגטו]]" title="הקלה אחר כך">
+<pre>[img[pictures/hakala.jpg]]
+
+</pre>
+</div>
 <div created="20161112230916972" modified="20180704183856663" tags="בתים" title="הקליניקה">
 <pre>[img[pictures/haklinika.jpg]]
 
@@ -14526,6 +14542,13 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 למזלי הרב [[אבי|אבינו]] סחב איתו כל הדרך מהנחלה את קופסת העץ הזאת - אותה הכין סבי [[לאימי|חנה אמנו]] לפני שנים רבות. היא עומדת על המיקרו ובתוכה ערימת מגבות מטבח שעולה ויורדת כל הזמן. מגבות המטבח הן חברות.</pre>
 </div>
+<div created="20190908124152651" modified="20190912091358737" tags="[[אירי טוענת]]" title="מגדל בבל בקטע טוב">
+<pre>[img[pictures/migdal-bavel.jpg]]
+
+!!![[גורה]]:
+
+אירי טוענת שאם השמרנות האנושית לא הייתה כל כך מבוהלת מהאחר, מהשונה - בעיקר מזה היושב בתוכה. מהזר, מהמוזר, מהחושב, מהמתנגד. אלמלא היינו נותנים למבוהלים להבהיל אותנו. אלמלא היינו שופטים זו את זה וזה את זו לחומרה, אם היינו מאמינים כי הפרד ומשול זו השיטה של הרוע, אלמלא היינו שמחים לאיד - לו היינו מבינים שלא לעולם חוסן, לו היינו מבינים שבעת הקשה הזו, לכולנו יש שפה משותפת ואנחנו יכולים להיות מחוברים זה לזה עם הפנים לאינסוף, והשמים הם אינם הגבול, כי מעל השמים יש עוד שמים ומעליהם עוד, ומי יודע מה יש בהמשך או מסביב ומי יודע מה ילד יום. </pre>
+</div>
 <div created="20170926191733045" modified="20190310195628570" tags="הסופרנוס ילדים טלוויזיה" title="מדו">
 <pre>[img[pictures/meadow-soprano.jpg]]
 
@@ -15495,6 +15518,13 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 
 &lt;&lt;list-links filter:&quot;[tag[סרטים]]&quot;&gt;&gt;</pre>
+</div>
+<div created="20190826152117911" modified="20190908124923818" tags="[[כאן בגטו]]" title="סתיו">
+<pre>[img[pictures/stav.jpg]]
+
+[[תומר]]:
+
+בשליש השלישי של אוגוסט.</pre>
 </div>
 <div created="20170815164314386" modified="20190314145130340" tags="[[כשהם ישנים]] [[חיות אוכל]] מתכונים אפייה" title="עוגות תאנים">
 <pre>[img[pictures/ugat-teenim.jpg]]
