--- a/index.html
+++ b/index.html
@@ -9175,7 +9175,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20191023055822715" title="$:/temp/search">
+<div created="20161023184814872" modified="20191023060140786" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -14329,16 +14329,16 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 [img[pictures/lily-17-1.jpg]]
 </pre>
 </div>
-<div created="20191023054233757" modified="20191023060004209" tags="[[קופים ממונעים]]" title="לימונים">
+<div created="20191023054233757" modified="20191023060303230" tags="[[קופים ממונעים]] סרטים" title="לימונים">
 <pre>[img[pictures/lemons.jpg]]
 
 !!![[גורה]]:
 
 אנא, אל תסחטו את כולי!
 
-לא רוצה להיות לימונדה, רוצה להיות לימון. יש סוכר בחמיצות שלי , כמו השמחה בעצב של ואן גוך, ואני לא רוצה כל כך מהר לא להיות, רוצה לחיות, רוצה לחיות
+לא רוצה להיות לימונדה, רוצה להיות לימון. יש סוכר בחמיצות שלי , כמו השמחה בעצב של ואן-גוך, ואני לא רוצה כל כך מהר לא להיות, רוצה לחיות, רוצה לחיות
 
-(ציור של [[ואן גוך|וינסנט ואן גוך]], שציירתי אחרי שצפיתי בסרט היפה [[ואן גוך בשערי הנצח|https://www.imdb.com/title/tt6938828/]]])</pre>
+(ציור של [[ואן גוך|וינסנט ואן-גוך]], שציירתי אחרי שצפיתי בסרט היפה [[ואן גוך בשערי הנצח|https://www.imdb.com/title/tt6938828/]])</pre>
 </div>
 <div created="20180429132711538" modified="20190617134147130" tags="[[חיות אוכל]] [[מתכונים טבעוניים]] מתכונים מטבחים" title="למה הדבר דומה">
 <pre>[img[pictures/lema-hadavar-dome.jpg]]
