--- a/index.html
+++ b/index.html
@@ -14329,14 +14329,16 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 [img[pictures/lily-17-1.jpg]]
 </pre>
 </div>
-<div created="20191023054233757" modified="20191023060303230" tags="[[קופים ממונעים]] סרטים" title="לימונים">
+<div created="20191023054233757" modified="20191023063042087" tags="[[קופים ממונעים]] סרטים" title="לימונים">
 <pre>[img[pictures/lemons.jpg]]
 
 !!![[גורה]]:
 
 אנא, אל תסחטו את כולי!
 
-לא רוצה להיות לימונדה, רוצה להיות לימון. יש סוכר בחמיצות שלי , כמו השמחה בעצב של ואן-גוך, ואני לא רוצה כל כך מהר לא להיות, רוצה לחיות, רוצה לחיות
+אמר הלימון
+
+לא רוצה להיות לימונדה, יש סוכר בחמיצות שלי , כמו השמחה בעצב של ואן-גוך, ואני לא רוצה כל כך מהר לא להיות, רוצה לחיות, רוצה לחיות
 
 (ציור של [[ואן גוך|וינסנט ואן-גוך]], שציירתי אחרי שצפיתי בסרט היפה [[ואן גוך בשערי הנצח|https://www.imdb.com/title/tt6938828/]])</pre>
 </div>
