--- a/index.html
+++ b/index.html
@@ -14329,7 +14329,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 [img[pictures/lily-17-1.jpg]]
 </pre>
 </div>
-<div created="20191023054233757" modified="20191023063042087" tags="[[קופים ממונעים]] סרטים" title="לימונים">
+<div created="20191023054233757" modified="20191023063307278" tags="[[קופים ממונעים]] סרטים" title="לימונים">
 <pre>[img[pictures/lemons.jpg]]
 
 !!![[גורה]]:
@@ -14340,7 +14340,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 לא רוצה להיות לימונדה, יש סוכר בחמיצות שלי , כמו השמחה בעצב של ואן-גוך, ואני לא רוצה כל כך מהר לא להיות, רוצה לחיות, רוצה לחיות
 
-(ציור של [[ואן גוך|וינסנט ואן-גוך]], שציירתי אחרי שצפיתי בסרט היפה [[ואן גוך בשערי הנצח|https://www.imdb.com/title/tt6938828/]])</pre>
+(ציור של [[ואן גוך|וינסנט ואן-גוך]], שציירתי אחרי שצפיתי בסרט היפה [[ואן גוך: בשערי הנצח|https://www.imdb.com/title/tt6938828/]])</pre>
 </div>
 <div created="20180429132711538" modified="20190617134147130" tags="[[חיות אוכל]] [[מתכונים טבעוניים]] מתכונים מטבחים" title="למה הדבר דומה">
 <pre>[img[pictures/lema-hadavar-dome.jpg]]
