--- a/index.html
+++ b/index.html
@@ -841,6 +841,8 @@ Error message and password prompt
 
 <li>כשנשאר בצק פריך</li>
 
+<li>כשנשאר בצק פריך 2</li>
+
 <li>כתב התנועה אשכול-וכמן</li>
 
 <li>לא חברמניות</li>
@@ -9155,7 +9157,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="לימונים [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[כשנשאר בצק פריך 2]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9175,7 +9177,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20191023060140786" title="$:/temp/search">
+<div created="20161023184814872" modified="20191027064152520" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -13943,7 +13945,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 לא השתמשו בחגורות בטיחות''
 </pre>
 </div>
-<div created="20190305120006619" modified="20190314145617206" tags="[[כשהם ישנים]] מתכונים אפייה" title="כשנשאר בצק פריך">
+<div created="20190305120006619" modified="20191027064147066" tags="[[כשהם ישנים]] מתכונים אפייה" title="כשנשאר בצק פריך">
 <pre>[img[pictures/keshenishar-bazek-parich.jpg]]
 
 !!![[אווה]]:
@@ -13961,6 +13963,29 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 6. לאפות בחום בינוני (170 מעלות צלזיוס) כעשרים דקות
 
 7. להניח על צלחת יפה ולהגיש</pre>
+</div>
+<div created="20191027063636357" modified="20191028065525800" tags="אפייה מתכונים [[כשהם ישנים]]" title="כשנשאר בצק פריך 2">
+<pre>[img[pictures/keshenishar-bazek-parich2.jpg]]
+
+!!![[אווה]]:
+
+השבוע נשאר כשליש מכמות אחת  של [[בצק פריך]] וכן היו בקופסה כמה תמרים פנויות. את התמרים חלטתי במים רותחים, קילפתי ומעכתי לממרח והנה הוראות ההכנה:
+
+1. במקום לקמח את משטח העבודה מפזרים זרעי שומשום, ומטמיעים אותם בדחיסה לתוך הבצק
+
+2. מרדדים לעלה מלבני 
+
+3. מורחים שכבה דקה של ממרח תמרים
+
+4. מפזרים מעט אבקת קינמון
+
+5. מגלגלים לרולדה
+
+6. מסמנים בחתכים דקים את גב הכרוכית
+
+7. אופים ב 170 מעלות צלזיוס כ 20 דקות עד חצי שעה (עד שהרולדות זהובות)
+
+</pre>
 </div>
 <div created="20180508163939540" modified="20180604184154715" tags="[[אירי טוענת]] [[אחיות חוץ]]" title="כתב התנועה אשכול-וכמן">
 <pre>[img[pictures/ctav-tnua.jpg]]
