--- a/tiddlywiki.html
+++ b/tiddlywiki.html
@@ -267,6 +267,8 @@ Error message and password prompt
 
 <li>max 20</li>
 
+<li>New Tiddler</li>
+
 <li>RTLStylesheet</li>
 
 <li>TLV</li>
@@ -814,8 +816,6 @@ Error message and password prompt
 <li>כירולוגיה פסיכודיאגנוסטית</li>
 
 <li>כישורים חברתיים</li>
-
-<li>כל הנראה</li>
 
 <li>כמולונז</li>
 
@@ -9159,7 +9159,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[כל הנראה]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[New Tiddler]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9435,6 +9435,10 @@ well,
 [[מקס 20 שביהודה הלוי 147|https://www.maxstock.co.il/%d7%a1%d7%a0%d7%99%d7%a4%d7%99%d7%9d/]], זה ממש כמו מחסן פרטי. אני יוצא מהבנין ועולה לפינת החשמונאים, פונה ימינה, חוצה, יורד עוד כמה צעדים, ויש לי כל מה שאני צריך בלכל היותר 20.
 
 </pre>
+</div>
+<div created="20191031173423206" modified="20191031173914168" tags="" title="New Tiddler">
+<pre>
+[img[pictures/kechol-hanire.jpg]]</pre>
 </div>
 <div created="20161023181104390" modified="20161113204648316" tags="$:/tags/Stylesheet LTR" title="RTLStylesheet" type="text/css">
 <pre>.tc-tiddler-title,
@@ -13795,13 +13799,6 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 מאחר שאנחנו כולנו, [[בין השאר|על הספקטרום]], נוער בסיכון על הרצף האספרגריסטי, אנחנו לומדים יחדיו כיצד להתמודד עם מצבים בלתי צפויים בחיים, כמו שאלות שמשאירות אותך הלום. 
 
 תשובה ראשונה בסיסית היא: &quot;אני אחשוב על זה&quot;. משפט שבתקופה של שיפוץ הדירה, הפך למטבע לשון אצלנו.</pre>
-</div>
-<div created="20191031173942851" modified="20191101110420209" tags="[[כאן בגטו]] [[מטא בדיון]] [[אחיות חוץ]] בתים" title="כל הנראה">
-<pre>[img[pictures/kechol-hanire.jpg]]
-
-!!![[אימא של ג'אז]]:
-
-מאחורי העציצים, הקיר והחלונות הנאים למראה האלה, שברחוב ביל&quot;ו 29 פינת כרמיה 15, בשקט ובענווה שוכנת [[&quot;ככל הנראה&quot;|https://www.google.co.il/maps/uv?hl=en&amp;pb=!1s0x151d4b78bb3c3de1:0xbce6de6b0ed80951!3m1!7e115!4shttps://lh5.googleusercontent.com/p/AF1QipPHn_r-3sxsjpJKXwkGj4tzzEmsBMFayxYy7bJm%3Dw284-h160-k-no!5z15vXm9ecINeU16DXqNeQ15Qg15HXmdec15UgLSBHb29nbGUgU2VhcmNo&amp;imagekey=!1e10!2sAF1QipPHn_r-3sxsjpJKXwkGj4tzzEmsBMFayxYy7bJm&amp;sa=X&amp;ved=2ahUKEwigqdac7cjlAhXE6aQKHdEXDoUQoiowCnoECA8QBg]] - המספרה החביבה עלי, ובתוכה מני הנפלא והבנות שאיתו - וזה בילוי בפני עצמו.</pre>
 </div>
 <div created="20180416185136170" modified="20180605131548272" tags="[[מתכונים טבעוניים]] [[חיות אוכל]] הצוות [[למה הדבר דומה]] מתכונים" title="כמולונז">
 <pre>[img[pictures/cmolonez.jpg]]
