--- a/index.html
+++ b/index.html
@@ -815,7 +815,7 @@ Error message and password prompt
 
 <li>כישורים חברתיים</li>
 
-<li>כל הנראה</li>
+<li>ככל הנראה</li>
 
 <li>כמולונז</li>
 
@@ -9159,7 +9159,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[כל הנראה]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[ככל הנראה]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -13796,7 +13796,7 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 תשובה ראשונה בסיסית היא: &quot;אני אחשוב על זה&quot;. משפט שבתקופה של שיפוץ הדירה, הפך למטבע לשון אצלנו.</pre>
 </div>
-<div created="20191031173942851" modified="20191101110420209" tags="[[כאן בגטו]] [[מטא בדיון]] [[אחיות חוץ]] בתים" title="כל הנראה">
+<div created="20191031173942851" modified="20191101110724334" tags="[[כאן בגטו]] [[מטא בדיון]] [[אחיות חוץ]] בתים" title="ככל הנראה">
 <pre>[img[pictures/kechol-hanire.jpg]]
 
 !!![[אימא של ג'אז]]:
