--- a/index.html
+++ b/index.html
@@ -809,6 +809,8 @@ Error message and password prompt
 
 <li>כוכב המשאלות בעל תשע הצלעות</li>
 
+<li>כולי עלמא</li>
+
 <li>כורתים עצים</li>
 
 <li>כירולוגיה פסיכודיאגנוסטית</li>
@@ -9159,7 +9161,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[ככל הנראה]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[כולי עלמא]] jazz ג'אז [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9179,7 +9181,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20191027064152520" title="$:/temp/search">
+<div created="20161023184814872" modified="20191107121827940" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -13773,6 +13775,17 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;list-links filter:&quot;[tag[כוכב המשאלות בעל תשע הצלעות]]&quot;&gt;&gt;</pre>
 </div>
+<div created="20191107114444294" modified="20191107140828807" tags="[[כאן בגטו]] מוזיקה [[מטא בדיון]]" title="כולי עלמא">
+<pre>[img[pictures/kuli-alma.jpg]]
+
+!!![[תומר]]:
+
+ככה זה כשאדם הולך אחרי [[הג'אז|jazz]] - הוא מגיע למקווה ישראל עשר ונכנס מהרחוב [[לכולי עלמא|https://kulialma.com/]], פונה ימינה ויורד במדרגות שמובילות למקום המקסים והצבעוני שהוא אוהב, קונה לעצמו ברד אננס וודקה, רואה אנשים צעירים מבלים, שמח בחלקו, ההופעה של ג'אז מתחילה והיא נפלאה זועמת וצוחקת וחכמה ויפה וכובשת וכל כך כשרונית, ופוגש את אהל היפה, קונים עוד דרינק, מדברים, וחוזר מבסוט [[לננו הקטנה|ננו שלי ואני]].
+
+
+
+</pre>
+</div>
 <div created="20170425180523126" modified="20181023115014420" tags="[[בחוות החיות]]" title="כורתים עצים">
 <pre>[img[pictures/kortim-ezim.jpg]]
 
@@ -14034,12 +14047,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 יש גם [[אפליקציות לסלולרים|https://github.com/tootsuite/documentation/blob/master/Using-Mastodon/Apps.md#list-of-apps]].</pre>
 </div>
-<div created="20181030190426548" modified="20181030193049171" tags="[[כאן בגטו]] [[מטא בדיון]]" title="לוטוס ספרים">
+<div created="20181030190426548" modified="20191105185359084" tags="[[כאן בגטו]] [[מטא בדיון]]" title="לוטוס ספרים">
 <pre>[img[pictures/lotus.jpg]]
 
 !!![[תומר]]:
 
-באלנבי 101 נמצאת [[לוטוס פנינת הספרים|https://book-store-1586.business.site/]]. חנות של משפחה שאוהבת לקרוא, עדינה וצנועה ומיטב הספרים במחירים שווים.</pre>
+באלנבי 101 שכנה  [[לוטוס פנינת הספרים ז&quot;ל|https://book-store-1586.business.site/]]. שהייתה שייכת למשפחה שאוהבת לקרוא. כמה קשה היה ביום ההוא בתחילת יולי, כשהלכתי באלנבי וראיתי שלוטוס נסגרה. אני עדיין צובט את עצמי בכל פעם שאני עובר שם ומבין שזו בלהה מן המציאות.</pre>
 </div>
 <div created="20170402165550173" modified="20180605133148089" tags="[[מתכוני ארוחת הכריסמס]] מתכונים" title="לוקוס בתנור">
 <pre>[img[pictures/dag-matconim.jpg]]
