--- a/index.html
+++ b/index.html
@@ -9161,7 +9161,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[כולי עלמא]] jazz ג'אז [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[כולי עלמא]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -13775,12 +13775,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;list-links filter:&quot;[tag[כוכב המשאלות בעל תשע הצלעות]]&quot;&gt;&gt;</pre>
 </div>
-<div created="20191107114444294" modified="20191107140828807" tags="[[כאן בגטו]] מוזיקה [[מטא בדיון]]" title="כולי עלמא">
+<div created="20191107114444294" modified="20191107145527467" tags="[[כאן בגטו]] מוזיקה [[מטא בדיון]]" title="כולי עלמא">
 <pre>[img[pictures/kuli-alma.jpg]]
 
 !!![[תומר]]:
 
-ככה זה כשאדם הולך אחרי [[הג'אז|jazz]] - הוא מגיע למקווה ישראל עשר ונכנס מהרחוב [[לכולי עלמא|https://kulialma.com/]], פונה ימינה ויורד במדרגות שמובילות למקום המקסים והצבעוני שהוא אוהב, קונה לעצמו ברד אננס וודקה, רואה אנשים צעירים מבלים, שמח בחלקו, ההופעה של ג'אז מתחילה והיא נפלאה זועמת וצוחקת וחכמה ויפה וכובשת וכל כך כשרונית, ופוגש את אהל היפה, קונים עוד דרינק, מדברים, וחוזר מבסוט [[לננו הקטנה|ננו שלי ואני]].
+ככה זה כשאדם הולך אחרי [[הג'אז|jazz]] - הוא מגיע למקווה ישראל עשר ונכנס מהרחוב [[לכולי עלמא|https://kulialma.com/]], פונה שמאלה ויורד במדרגות שמובילות למקום המקסים והצבעוני שהוא אוהב, קונה לעצמו ברד אננס וודקה, רואה אנשים צעירים מבלים, שמח בחלקו, ההופעה של ג'אז מתחילה והיא נפלאה זועמת וצוחקת וחכמה ויפה וכובשת והשירים.. וואו, ופוגש את אהל היפה, קונים עוד דרינק, מדברים, וחוזר מבסוט [[לננו הקטנה|ננו שלי ואני]] שלי שחגגה יומיים לפני יום הולדת שנתיים.
 
 
 
