--- a/index.html
+++ b/index.html
@@ -287,6 +287,8 @@ Error message and password prompt
 
 <li>אהבה</li>
 
+<li>אהל היפה</li>
+
 <li>אהרון אחי השלם</li>
 
 <li>אודליה</li>
@@ -9161,7 +9163,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[כולי עלמא]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[אהל היפה]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9568,6 +9570,17 @@ well,
 אני משתדלת לאהוב את עצמי, כולל את נטייתי להתרתח מדברים.
 
 למשל מרתיח אותי כשמשתמשים סתם במילים, למשל במילה אהבה.
+
+
+</pre>
+</div>
+<div created="20191110123155001" modified="20191111210042377" tags="[[אחיות חוץ]] [[כאן בגטו]] [[מטא בדיון]] [[סיפורים אמיתיים]]" title="אהל היפה">
+<pre>[img[pictures/ahal-eden.jpg]]
+
+!!![[תומר]]:
+
+אהל היפה היא [[אהל עדן היפה|https://www.instagram.com/ahaleden/]] שגורה ציירה אותה בתמונה מהגב דווקא כי מי יכולה להיות עם [[הז'קט המושלם|https://en.wikipedia.org/wiki/Enter_the_Ninja]] באולם [[עוזי פרס ז&quot;ל|https://he.wikipedia.org/wiki/%D7%A2%D7%95%D7%96%D7%99_%D7%A4%D7%A8%D7%A1]], ולך תדע איזה דבר הכי שיש היא תעשה אחר כך - לפחות נתקלתי בה בהופעה של [[ג'אז|jazz]], שהסתבר שהם משפחה, והיה לי העונג להתוודע אליה. אני קצת מאוהב, ואני חושב שהיא בהחלט אחת יחידה והכרחית כאן בגטו ולגטו שלנו המחייך.
+
 
 
 </pre>
