--- a/index.html
+++ b/index.html
@@ -9151,10 +9151,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170607193038305" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20161023184709475" modified="20190912084349307" title="$:/state/tab/moresidebar-401116514">
-<pre>$:/core/ui/MoreSideBar/Tags</pre>
+<div created="20161023184709475" modified="20191111210636746" title="$:/state/tab/moresidebar-401116514">
+<pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20190912084726799" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20191111210639917" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9574,12 +9574,12 @@ well,
 
 </pre>
 </div>
-<div created="20191110123155001" modified="20191111210042377" tags="[[אחיות חוץ]] [[כאן בגטו]] [[מטא בדיון]] [[סיפורים אמיתיים]]" title="אהל היפה">
+<div created="20191110123155001" modified="20191111210823609" tags="[[אחיות חוץ]] [[כאן בגטו]] [[מטא בדיון]] [[סיפורים אמיתיים]]" title="אהל היפה">
 <pre>[img[pictures/ahal-eden.jpg]]
 
 !!![[תומר]]:
 
-אהל היפה היא [[אהל עדן היפה|https://www.instagram.com/ahaleden/]] שגורה ציירה אותה בתמונה מהגב דווקא כי מי יכולה להיות עם [[הז'קט המושלם|https://en.wikipedia.org/wiki/Enter_the_Ninja]] באולם [[עוזי פרס ז&quot;ל|https://he.wikipedia.org/wiki/%D7%A2%D7%95%D7%96%D7%99_%D7%A4%D7%A8%D7%A1]], ולך תדע איזה דבר הכי שיש היא תעשה אחר כך - לפחות נתקלתי בה בהופעה של [[ג'אז|jazz]], שהסתבר שהם משפחה, והיה לי העונג להתוודע אליה. אני קצת מאוהב, ואני חושב שהיא בהחלט אחת יחידה והכרחית כאן בגטו ולגטו שלנו המחייך.
+אהל היפה היא [[אהל עדן היפה|https://www.instagram.com/ahaleden/]] שגורה ציירה אותה בתמונה מהגב דווקא כי מי יכולה להיות עם [[הז'קט המושלם|https://en.wikipedia.org/wiki/Enter_the_Ninja]] באולם [[עוזי פרס ז&quot;ל|https://he.wikipedia.org/wiki/%D7%A2%D7%95%D7%96%D7%99_%D7%A4%D7%A8%D7%A1]], ולך תדע איזה דבר הכי שיש היא תעשה אחר כך - לפחות נתקלתי בה [[בכולי עלמא|כולי עלמא]] בהופעה של [[ג'אז|jazz]], שהסתבר שהן משפחה, והיה לי העונג להתוודע אליה. אני קצת מאוהב, ואני חושב שהיא בהחלט אחת יחידה והכרחית כאן בגטו ולגטו שלנו המחייך.
 
 
 
@@ -13788,12 +13788,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 &lt;&lt;list-links filter:&quot;[tag[כוכב המשאלות בעל תשע הצלעות]]&quot;&gt;&gt;</pre>
 </div>
-<div created="20191107114444294" modified="20191107145527467" tags="[[כאן בגטו]] מוזיקה [[מטא בדיון]]" title="כולי עלמא">
+<div created="20191107114444294" modified="20191111210520820" tags="[[כאן בגטו]] מוזיקה [[מטא בדיון]]" title="כולי עלמא">
 <pre>[img[pictures/kuli-alma.jpg]]
 
 !!![[תומר]]:
 
-ככה זה כשאדם הולך אחרי [[הג'אז|jazz]] - הוא מגיע למקווה ישראל עשר ונכנס מהרחוב [[לכולי עלמא|https://kulialma.com/]], פונה שמאלה ויורד במדרגות שמובילות למקום המקסים והצבעוני שהוא אוהב, קונה לעצמו ברד אננס וודקה, רואה אנשים צעירים מבלים, שמח בחלקו, ההופעה של ג'אז מתחילה והיא נפלאה זועמת וצוחקת וחכמה ויפה וכובשת והשירים.. וואו, ופוגש את אהל היפה, קונים עוד דרינק, מדברים, וחוזר מבסוט [[לננו הקטנה|ננו שלי ואני]] שלי שחגגה יומיים לפני יום הולדת שנתיים.
+ככה זה כשאדם הולך אחרי [[הג'אז|jazz]] - הוא מגיע למקווה ישראל עשר ונכנס מהרחוב [[לכולי עלמא|https://kulialma.com/]], פונה שמאלה ויורד במדרגות שמובילות למקום המקסים והצבעוני שהוא אוהב, קונה לעצמו ברד אננס וודקה, רואה אנשים צעירים מבלים, שמח בחלקו, ההופעה של ג'אז מתחילה והיא נפלאה זועמת וצוחקת וחכמה ויפה וכובשת והשירים.. וואו, ופוגש את [[אהל היפה]], קונים עוד דרינק, מדברים, וחוזר מבסוט [[לננו הקטנה|ננו שלי ואני]] שלי שחגגה יומיים לפני יום הולדת שנתיים.
 
 
 
