--- a/english.html
+++ b/english.html
@@ -47,25 +47,6 @@ DAMAGE.
 <title>Coen Sisters' archive — Gesund-Heights, floor -1, chez Stalin</title>
 <!--~~ This is a Tiddlywiki file. The points of interest in the file are marked with this pattern ~~--><!--~~ Raw markup ~~-->
 <link rel="alternate" type="application/rss+xml" title="האחיות כהן" href="rss.xml">
-
-<!-- Matomo -->
-<script type="text/javascript">
-  var _paq = window._paq || [];
-  /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
-  _paq.push(['trackPageView']);
-  _paq.push(['enableLinkTracking']);
-  (function() {
-    var u="//dupzzzen.corky.net/statz/";
-    _paq.push(['setTrackerUrl', u+'matomo.php']);
-    _paq.push(['setSiteId', '3']);
-    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
-    g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
-  })();
-</script>
-<noscript><p><img src="//dupzzzen.corky.net/statz/matomo.php?idsite=3&amp;rec=1" style="border:0;" alt="" /></p></noscript>
-<!-- End Matomo Code -->
-
-
 </head>
 <body class="tc-body">
 <!--~~ Static styles ~~-->
@@ -8322,12 +8303,12 @@ Sherlock, in the Jonny Lee Miller version, watches seven screens at the same tim
 <div _canonical_uri="pictures/newbg-dark.jpg" created="20170607193119061" modified="20170607230143664" tags="" title="logo-bg" type="image/jpeg">
 <pre></pre>
 </div>
-<div created="20190226093702127" modified="20190226094154855" tags="[[Here in the Ghetto]] Music Metafiction" title="Radio epgb">
+<div created="20190226093702127" modified="20191113120153415" tags="[[Here in the Ghetto]] Music Metafiction" title="Radio epgb">
 <pre>[img[pictures/radio-epgb.jpg]]
 
 !!![[Tomer]]
 : 
-I love invisible places that only open when it's dark, like the radio, located on 7 shadal street. You get in and go down to the dark and good bar, to the touching and energizing music, and the atmosphere. If it's on a Tuesday night, enjoy the killer line that Jazz (which I'm known to be her groupie) is in charge of and performs in – and it's worth checking it out on other days. 
+I love invisible places that only open when it's dark, like the radio, located on 7 shadal street. You get in and go down to the dark and good bar, to the touching and energizing music, and the atmosphere. If it's on a Tuesday night, enjoy the killer line that Jazz (which I'm known to be her groupie) is in charge of and performs in – and it's worth checking it out on other days.  ooo
 
 &lt;&lt;heblink [[רדיו epgb]]&gt;&gt;</pre>
 </div>
