--- a/english.html
+++ b/english.html
@@ -8118,7 +8118,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Radio epgb]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8287,10 +8287,22 @@ tootdiv a:visited {text-decoration: none; color: #700}</pre>
 <div _canonical_uri="pictures/bjVmMLrT1A6cNJ2g.jpg" created="20161024112200319" modified="20170119202336098" tags="" title="bg" type="image/jpeg">
 <pre></pre>
 </div>
-<div created="20180915085721246" modified="20190226094009070" tags="[[Monkeys with car keys]]" title="Coen Sisters">
+<div created="20180915085721246" modified="20191113130248476" tags="[[Monkeys with car keys]]" title="Coen Sisters">
 <pre>[img[pictures/coen-sisters.jpg]]
 
-It's a long story... &lt;&lt;heblink [[האחיות כהן]]&gt;&gt;</pre>
+!!![[yoyo]]:
+
+Hello,
+In December 2015, 10 days after Gura, Dandan and I moved into the apartment, we had friends over for the Christmas meal. It was a fantastic meal, gummy-a-bearge. I mostly remember me standing there, wobbling , crazy happy with myself.
+For the opening lines, I'm pasting the part where Eva described me standing there, speaking in front of my friends at the 9-side-wishing-star:
+Pretty long time ago, 13-14 years ago, I has this.... phase. I was a huge pothead, and regardless, I've always liked to invent things. One of the things that I invented back then was that I am a basic Hungarian woman, named Eva Coen, and actually as far as I was concerned, I was the sister of Ethan and Joel Coen, the Coen brothers, even though Joel is the name of my father and I don't have any brothers, only four sisters, just like Dr Derek Shepherd. The idea remained and continued to evolve, and with time I decided that I want to establish a group of independent but related creators that will be called Coen sisters. I shared it with Gura, my beautiful little sister. Gura and I have worked for many days, developing the agenda and the characters, the concept and the drama. We wrote a foundation for eight chapters series about the sisters with an option to continue... And why am I telling you this? Because when I arrived to the apartment I realized that that's the launch pad of the sisters, and that's why I built the lab in my sleeping room. And now, for the real thing. I'm inviting each one of you to join the group.  A basic condition for entering the sisters' project is that Saraleh would have liked it. Who is Saraleh? Saraleh is a woman who died due to brain cancer, just like Meir Ariel told on the movie THE CAMPAIGN OF MEIR ARIEL (5:30 minutes into the movie), about a woman who was taken young, and had a very interesting mind, and he wished that she was his literature teacher. He tells about her craziest most brilliant jokes, and about the urge he had to write her a goodbye note on the shloshim, thirty days after she passed, something like a love poem for his teacher that he might even ask her to grade. And who decides whether deceased Saraleh would have liked it or not? The naive thing that I aspire is neither I nor any other sisters' member ever have to behave as a politician, because I'm sure that Saraleh would have not liked it.
+Or like Gura and I wrote back then, when I lived between the oaks:
+The sisters' questionnaire
+Be good. 
+
+
+
+ &lt;&lt;heblink [[האחיות כהן]]&gt;&gt;</pre>
 </div>
 <div created="20190226092627784" modified="20190226092924645" tags="[[TV Series]]" title="Elementary">
 <pre>[img[pictures/elementary.jpg]]
