--- a/english.html
+++ b/english.html
@@ -249,6 +249,8 @@ Error message and password prompt
 
 <li>$:/user/styles</li>
 
+<li>ayala malach pines</li>
+
 <li>bg</li>
 
 <li>Coen Sisters</li>
@@ -8118,7 +8120,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="[[ayala malach pines]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8284,10 +8286,23 @@ a.translation:hover { text-decoration: underline }
 .tootdiv a:hover {text-decoration: none; color: #f88}
 tootdiv a:visited {text-decoration: none; color: #700}</pre>
 </div>
+<div created="20191113130654313" modified="20191113131340124" tags="" title="ayala malach pines">
+<pre>
+[img[pictures/ayala-malach-pines.jpg]]
+
+!!![[yoyo]]:
+
+
+In the post-Ella episode, the boss that I used to have back then, gave me a piece of paper with Ayala Malach's phone number, and said: &quot;call her, she's a serious psychologist, she's a colleague of my wife, don't mess it up&quot;.
+I had difficult problems to solve back then, and she always listened, smiled and understood. It was clear it's gonna take time, but with a caressing glance she told me: the blue is already here, and I understood. And today, I already know that she was completely right.
+A soul was born by her inspiration. May she rest in peace.  
+
+ &lt;&lt;heblink [[איילה מלאך]]&gt;&gt;</pre>
+</div>
 <div _canonical_uri="pictures/bjVmMLrT1A6cNJ2g.jpg" created="20161024112200319" modified="20170119202336098" tags="" title="bg" type="image/jpeg">
 <pre></pre>
 </div>
-<div created="20180915085721246" modified="20191113130248476" tags="[[Monkeys with car keys]]" title="Coen Sisters">
+<div created="20180915085721246" modified="20191113131045494" tags="[[Monkeys with car keys]] [[outer sisters]]" title="Coen Sisters">
 <pre>[img[pictures/coen-sisters.jpg]]
 
 !!![[yoyo]]:
