--- a/index.html
+++ b/index.html
@@ -9163,7 +9163,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[אהל היפה]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[איילה מלאך פיינס]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9183,7 +9183,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20191107121827940" title="$:/temp/search">
+<div created="20161023184814872" modified="20191113131302156" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10107,7 +10107,7 @@ well,
 
 </pre>
 </div>
-<div created="20170914175036224" modified="20171029224631351" tags="[[אחיות חוץ]]" title="איילה מלאך פיינס">
+<div created="20170914175036224" modified="20191113131258808" tags="[[אחיות חוץ]]" title="איילה מלאך פיינס">
 <pre>[img[pictures/ayala-malach-pines.jpg]]
 
 !!![[יויו]]:
@@ -10118,7 +10118,7 @@ well,
 
 בהשראתה נולדה [[נשמה]]. יהי זיכרה ברוך.
 
-
+&lt;&lt;englink [[ayala malach pines]]&gt;&gt;
 
 </pre>
 </div>
@@ -17378,7 +17378,7 @@ Fapina''
 
 </pre>
 </div>
-<div created="20181223141707382" modified="20190226094354974" tags="[[כאן בגטו]] מוזיקה [[מטא בדיון]]" title="רדיו epgb">
+<div created="20181223141707382" modified="20191113131210516" tags="[[כאן בגטו]] מוזיקה [[מטא בדיון]]" title="רדיו epgb">
 <pre>[img[pictures/radio-epgb.jpg]]
 
 !![[תומר]]:
